--- a/src/components/Calculator/calculator.scss
+++ b/src/components/Calculator/calculator.scss
@@ -36,7 +36,7 @@ background-repeat: no-repeat;
        margin: auto;
    }
    .content{
-       text-align: center;
+    //    text-align: center;
    }
  .calculator-option{
      
