--- a/src/css/css/style.scss
+++ b/src/css/css/style.scss
@@ -598,6 +598,7 @@ section {
   filter: grayscale(100);
 }
 
+
 .clients img:hover {
   filter: none;
   transform: scale(1.1);
@@ -1823,6 +1824,7 @@ section {
   padding-top: 30px;
   padding-bottom: 30px;
   color: #fff;
+  background: #37517e;
 }
 
 #footer .copyright {
