--- a/src/css/loanprocess.scss
+++ b/src/css/loanprocess.scss
@@ -1,65 +1,54 @@
-
-.color{
-    // background-image: url("loanprocess.jpg");
-    background-position: center;
-background-size: cover;
-position: relative;
-height: 430px;
-background-repeat: no-repeat;
+.color {
+  // background-image: url("loanprocess.jpg");
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  height: 430px;
+  background-repeat: no-repeat;
 }
-.contact{
-    text-decoration: none;
+.contact {
+  text-decoration: none;
 }
-.contact:hover{
-    text-decoration: dashed;
+.contact:hover {
+  text-decoration: dashed;
 }
-.overlay-effect{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 86, 184, 0.75);
-    overflow:hidden;
-    }
-    .name{
-        color: #fff;
-        
-    }
-.container{
-    position: relative;
+.overlay-effect {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3d4d6a80;
+  // background-color: rgba(0, 86, 184, 0.75);
+  overflow: hidden;
 }
-.img{
-//   width: 100%;
+.name {
+  color: #fff;
+}
+.container {
+  position: relative;
+}
+.img {
+  //   width: 100%;
   height: 430px;
 }
 
-
-
-
-
-
-.button{
-    background-color: #D2691E;
-    color : #fff;
-    font-family: sans-serif;
-   
+.button {
+  background-color: #d2691e;
+  color: #fff;
+  font-family: sans-serif;
 }
-.link{
-    color: rgb(25, 25, 230);
+.link {
+  color: rgb(25, 25, 230);
 }
-.list{
-    margin-left: 5%;
-    font-family: sans-serif;
+.list {
+  margin-left: 5%;
+  font-family: sans-serif;
 }
-.image{
-    width: 90%
+.image {
+  width: 90%;
 }
-
-
-    
-    
