--- a/src/css/Sidebar.scss
+++ b/src/css/Sidebar.scss
@@ -1,6 +1,6 @@
 .sidebarcontent.open {
   // width: 210px;
-  background-color: #084298;
+  background-color: #dbd3e973;
   height: 100vh;
   position: fixed;
   top: 92px;
@@ -57,7 +57,8 @@
 
 .sidebarcontent.open a {
   display: block;
-  color: rgb(244, 248, 250);
+  // color: rgb(244, 248, 250);
+  color: #3d4d6a;
   font-size: 14px;
   padding: 16px 10px 16px 20px !important;
   margin: 0px 10px;
@@ -102,8 +103,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  
-  
+
   z-index: 3;
   background-color: antiquewhite;
   color: #f8f9fa;
