responsible footer and sidebar

--- a/src/components/Calculator/calculator.scss
+++ b/src/components/Calculator/calculator.scss
@@ -24,6 +24,10 @@
 .page-name {
   margin-left: 10%;
 }
+.para-padding{
+  padding-left: 20% !important;
+  padding-right: 20% !important;
+}
 .heading_1 {
   margin-top: 5%;
   text-align: center;
